fix horizontal scrollbar width for webkit and chromium

--- a/pages/global.scss
+++ b/pages/global.scss
@@ -21,6 +21,7 @@
   // Scrollbar (Required: Webkit & Chromium)
   ::-webkit-scrollbar {
     width: 9px;
+    height: 9px;
   }
 
   ::-webkit-scrollbar-track {
